refactor(chat): 重构聊天模块
- 移除了 ArchiveSessionDTO 和 ArchiveSessionRequest 类
-精简了 ChatAskDTO 和 ChatFeedbackDTO 类
- 重构了 ChatService 接口，简化了方法签名
- 新增了 ChatMessagePageRequestDTO 类用于分页查询
- 修改了 ChatMessagesDAO 和 ChatMessagesMapper 接口，增加了新方法
- 更新了相关 XML 文件以适应新的 SQL 查询